# eventgen

./: .editorconfig  .flake8  .gitignore  .npmrc  .yapfignore  CONTRIB.MD  CONTRIBUTING.md  Gruntfile.js  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  SA-Eventgen.tmproj  artifacts.conf  build.properties  build.sh  build.xml  eventgen.spl  hello.txt  package.json  pyproject.toml  requirements.txt  run_tests.py  scp_dashboard_test.conf  scp_dashboard_test.txt  set_env.sh  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
README/: Architecture.md  Performance.md  Plugins.md  Tutoral.md  Tutorial.md  eventgen-standalone.conf.tutorial1  eventgen-standalone.conf.tutorial2  eventgen-standalone.conf.tutorial3  eventgen.conf.example  eventgen.conf.spec  eventgen.conf.tutorial1  eventgen.conf.tutorial2  eventgen.conf.tutorial3  eventgen.conf.tutorial4
default/: app.conf  distsearch.conf  eventgen.conf  inputs.conf  inputs.conf.windows  props.conf  restmap.conf  setup.xml  transforms.conf
dockerfiles/: Dockerfile  Dockerfile-pypy  entrypoint.sh  sshd_config  sshd_config_with_sftp
docs/: ARCHITECTURE.md  BASICS.md  CHANGELOG.md  CONFIGURE.md  CONTRIBUTE.md  CONTRIBUTE_CODE.md  FILE_ISSUES.md  INDEX.md  PERFORMANCE.md  PLUGINS.md  REFERENCE.md  SETUP.md  SUMMARY.md  TUTORIAL.md  UPGRADE.md  entrypoint.sh  index.md
documentation/: ARCHITECTURE.md  BASICS.md  Dockerfile  PERFORMANCE.md  README.md  REFERENCE.md  SETUP.md  SUMMARY.md  TUTORIAL.md  book.json  deploy.py  docker-compose.yml  entrypoint.sh  eventgendocs.yml
lib/: .gitignore  eventgen_defaults  eventgenconfig.py  eventgencounter.py  eventgenoutput.py  eventgenqueue.py  eventgensamples.py  eventgentimer.py  eventgentoken.py  eventgenzmq.py  generatorplugin.py  generatorworker.py  outputplugin.py  outputworker.py  timeparser.py
local/: .gitignore  app.conf  eventgen-standalone.conf  eventgen-standalone.conf.sample  eventgen-test.conf  inputs.conf
package/: README.md
package/README/: Architecture.md  eventgen.conf.spec  eventgen.conf.tutorial1  eventgen.conf.tutorial3
package/default/: app.conf  distsearch.conf  distsearch.conf.windows  eventgen.conf  inputs.conf  inputs.conf.windows  props.conf  restmap.conf  setup.xml  transforms.conf
package/lib/: eventgenconfig.py  eventgencounter.py  eventgenoutput.py  eventgensamples.py  eventgentimer.py  eventgentoken.py
package/samples/: anomalous.hostname.sample  anomalous.ip_address.sample  anomalous.mac_address.sample  hostname.sample  ip_address.sample  mac_address.sample  radhosts.sample  uris.sample  vmware-actuals-host-aggregate.csv
release_tool/: README.md  prepare_release_branch.py
samples/: artIDs.sample  autoBillPayment.sample  cisco.sample  external_ips.sample  hostname.sample  linux_arch.sample  markets.sample  networkProvider.sample  orderType.sample  orig.sample.mobilemusic.csv  plans.sample  random_domains.sample  sample.mobilemusic.csv  sample.mobilemusicfailure.csv  sample.mobilemusicfailuresearch.csv  sample.tutorial1  sample.tutorial3  searchArtists.sample  states.abbrev  trackIDs.sample  uris.sample  userHostIp.sample  useragents_desktop.sample  useragents_mobile.sample  users.sample  vmware-actuals-guest.csv  vmware-actuals-host.csv  vmware-inventory.csv  vmware-perf-guest-aggregate.csv  vmware-perf-guest.csv  vmware-perf-host-aggregate.csv  vmware-perf-host-instance.csv  vmware-perf-host.csv  webhosts.sample
scripts/: eventgen_CD.py
splunk_eventgen/: Makefile  __init__.py  __main__.py  controller_conf.yml  eventgen_barrage_engine.py  eventgen_core.py  eventgen_nameko_controller.py  eventgen_nameko_dependency.py  eventgen_nameko_server.py  eventgen_wsgiserver.py  eventgenapi_client.py  eventgenapi_client_test.py  eventgenapi_common.py  identitygen.py  listener_conf.yml  server_conf.yml  version.json  web.conf
splunk_eventgen/README/: Performance.md  Plugins.md  Tutorial.md  default.meta.example  eventgen-scs-metric.conf.tutorial  eventgen-standalone.conf.tutorial2  eventgen-standalone.conf.tutorial3  (+7 more)
tests/: .coveragerc  .gitignore  configstest.py  eventgen.conf.test1  requirements.txt  run_tests.py  testtimeparser.py
testss/: hello.txt
(+471 files in other folders)
