[flake8]
exclude = .git,.tox,__pycache__,env,venv,splunk_eventgen/lib/concurrent/futures/__init__.py
max-line-length = 120
ignore = E121,E123,E126,E226,E24,E704,W503,W504,E722,E731,W605
# Includes default ignores, E722 (bare excepts), E731 (lambda usage), and W605 (escape sequences)

[metadata]
description-file = README.md
version-from-file: __init__.py

[yapf]
column_limit = 120
split_all_comma_separated_values = false
split_before_named_assigns = false
split_before_first_argument = false
split_before_expression_after_opening_paren = false
split_before_closing_bracket = false
each_dict_entry_on_separate_line = false

[isort]
# isort/yapf solutions to below files are not compatible
skip = splunk_eventgen/lib/concurrent/futures/__init__.py